force-app/main/default/objects/Plan__c/fields/Data__c.field-meta.xml
<CustomField>
    <fullName>Data__c</fullName>
    <label>Data %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>