force-app/main/default/objects/Plan__c/fields/SMS__c.field-meta.xml
<CustomField>
    <fullName>SMS__c</fullName>
    <label>SMS %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>