force-app/main/default/objects/Plan__c/fields/Voice__c.field-meta.xml
<CustomField>
    <fullName>Voice__c</fullName>
    <label>Voice %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>